--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "7.12.0",
     "eslint-config-prettier": "6.14.0",
     "eslint-plugin-prettier": "3.1.4",
+    "express": "^4.17.1",
     "import-sort": "6.0.0",
     "import-sort-cli": "6.0.0",
     "import-sort-parser-typescript": "6.0.0",
