--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "ts-jest": "26.4.2",
     "ts-node": "9.0.0",
     "typescript": "4.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
