--- a/package.json
+++ b/package.json
@@ -1,47 +1,47 @@
 {
-  "name": "ts-boilerplate",
-  "version": "1.0.0",
-  "main": "dist/index.js",
-  "license": "UNLICENSED",
-  "private": true,
-  "scripts": {
-    "start": "ts-node src/index",
-    "build": "tsc",
-    "lint": "eslint src/**",
-    "lint:tsc": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watchAll"
-  },
-  "importSort": {
-    ".ts, .tsx": {
-      "parser": "typescript",
-      "style": "module-scoped"
+    "name": "ts-boilerplate",
+    "version": "1.0.0",
+    "main": "dist/index.js",
+    "license": "UNLICENSED",
+    "private": true,
+    "scripts": {
+        "start": "ts-node src/index",
+        "build": "tsc",
+        "lint": "eslint src/**",
+        "lint:tsc": "tsc --noEmit",
+        "test": "jest",
+        "test:watch": "jest --watchAll"
+    },
+    "importSort": {
+        ".ts, .tsx": {
+            "parser": "typescript",
+            "style": "module-scoped"
+        }
+    },
+    "eslintIgnore": [
+        "/**/*.js"
+    ],
+    "dependencies": {
+        "@types/jest": "26.0.15",
+        "@types/node": "14.14.3",
+        "@typescript-eslint/eslint-plugin": "4.5.0",
+        "@typescript-eslint/parser": "4.5.0",
+        "eslint": "7.12.0",
+        "eslint-config-prettier": "6.14.0",
+        "eslint-plugin-prettier": "3.1.4",
+        "express": "^4.17.1",
+        "import-sort": "6.0.0",
+        "import-sort-cli": "6.0.0",
+        "import-sort-parser-typescript": "6.0.0",
+        "import-sort-style-module-scoped": "1.0.3",
+        "jest": "26.6.1",
+        "prettier": "2.1.2",
+        "prettier-plugin-import-sort": "0.0.6",
+        "ts-jest": "26.4.2",
+        "ts-node": "^9.1.1",
+        "typescript": "4.0.3"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.11"
     }
-  },
-  "eslintIgnore": [
-    "/**/*.js"
-  ],
-  "dependencies": {
-    "@types/jest": "26.0.15",
-    "@types/node": "14.14.3",
-    "@typescript-eslint/eslint-plugin": "4.5.0",
-    "@typescript-eslint/parser": "4.5.0",
-    "eslint": "7.12.0",
-    "eslint-config-prettier": "6.14.0",
-    "eslint-plugin-prettier": "3.1.4",
-    "express": "^4.17.1",
-    "import-sort": "6.0.0",
-    "import-sort-cli": "6.0.0",
-    "import-sort-parser-typescript": "6.0.0",
-    "import-sort-style-module-scoped": "1.0.3",
-    "jest": "26.6.1",
-    "prettier": "2.1.2",
-    "prettier-plugin-import-sort": "0.0.6",
-    "ts-jest": "26.4.2",
-    "ts-node": "9.0.0",
-    "typescript": "4.0.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.11"
-  }
 }
