--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "jest": "26.6.1",
         "prettier": "2.1.2",
         "prettier-plugin-import-sort": "0.0.6",
+        "pug": "^3.0.2",
         "ts-jest": "26.4.2",
         "ts-node": "^9.1.1",
         "typescript": "4.0.3"
