--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
         "prettier": "2.1.2",
         "prettier-plugin-import-sort": "0.0.6",
         "pug": "^3.0.2",
+        "serve-favicon": "^2.5.0",
         "ts-jest": "26.4.2",
         "ts-node": "^9.1.1",
         "typescript": "4.0.3"
     },
     "devDependencies": {
-        "@types/express": "^4.17.11"
+        "@types/express": "^4.17.11",
+        "@types/serve-favicon": "^2.5.2"
     }
 }
