--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "private": true,
     "scripts": {
         "start": "ts-node src/index",
-        "build": "tsc",
+        "clean": "rimraf dist/",
+        "copy-files": "copyfiles -u 1 src/**/*.* -e src/**/*.ts  dist/",
+        "build": "npm run clean && tsc && npm run copy-files",
         "lint": "eslint src/**",
         "lint:tsc": "tsc --noEmit",
         "test": "jest",
@@ -45,6 +47,8 @@
     },
     "devDependencies": {
         "@types/express": "^4.17.11",
-        "@types/serve-favicon": "^2.5.2"
+        "@types/serve-favicon": "^2.5.2",
+        "copyfiles": "^2.4.1",
+        "rimraf": "^3.0.2"
     }
 }
