--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/node": "14.14.3",
         "@typescript-eslint/eslint-plugin": "4.5.0",
         "@typescript-eslint/parser": "4.5.0",
+        "dotenv": "^8.2.0",
         "eslint": "7.12.0",
         "eslint-config-prettier": "6.14.0",
         "eslint-plugin-prettier": "3.1.4",
